<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="online.avogadro.opencv4tasker.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/testImagePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:ems="10"
            android:inputType="text"
            android:text="content://media/external/images/media/1000000081" />

        <Button
            android:id="@+id/buttonPickFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="..." />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioEngineClaudeAI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engine_claude" />

        <RadioButton
            android:id="@+id/radioEngineGemini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engine_gemini" />

        <RadioButton
            android:id="@+id/radioEngineOpenRouter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engine_openrouter" />

        <RadioButton
            android:id="@+id/radioEngineTensorflowLite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/engine_tensorflow" />

        <RadioButton
            android:id="@+id/radioEngineGemma4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engine_gemma4" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Test recognition" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="start|top" />

    <TextView
        android:id="@+id/warningTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF3CD"
        android:padding="8dp"
        android:text="Google/Claude/OpenRouter keys are not set: add your keys if you want to use these online models.\nSee instructions here on how to generate the keys"
        android:textColor="#856404"
        android:textSize="12sp"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>
